<resources>
    <string name="app_name">HurgadHotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_photo">hotel_photo</string>
    <string name="to_choose_room">К выбору номера</string>
    <string name="hotel">Отель</string>
    <string name="star_icon">star icon</string>
    <string name="about_hotel">Об отеле</string>
    <string name="facilities">Удобства</string>
    <string name="most_needed">Самое необходимое</string>
    <string name="what_is_included">Что включено</string>
    <string name="what_is_not_included">Что не включено</string>
    <string name="next_step">next step</string>
    <string name="check_icon">check icon</string>
    <string name="smile_icon">smile icon</string>
    <string name="more_about_room">Подробнее о номере</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="booking">Бронирование</string>
    <string name="take_off_from">Вылет из</string>
    <string name="destination_text">Страна, город</string>
    <string name="Dates">Даты</string>
    <string name="number_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="confidential_alert">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный вами номер и почту</string>
    <string name="buyer_info">Информация о покупателе</string>
</resources>