<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bookingViewModel"
            type="com.example.hurgadhotel.bookingPage.BookingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bookingPage.BookingFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0D72FFE6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="#FFFFFF">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/arrow_back" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/booking"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>

        <!--hotel block-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/ratingContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rating_container"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photoCard">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/star_icon"
                        android:src="@drawable/icon_star"
                        app:tint="#FFA800" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#FFA800" />

                    <TextView
                        android:id="@+id/rating_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#FFA800" />
                </LinearLayout>

                <TextView
                    android:id="@+id/hotelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingContainer" />

                <TextView
                    android:id="@+id/hotelAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textColor="#0D72FF"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hotelName" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- booking info block-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView1">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/take_off_from" />

                <TextView
                    android:id="@+id/departure_city"
                    style="@style/BookingInfoBlockMainStyle"
                    android:text="Some text" />

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/destination_text" />

                <TextView
                    android:id="@+id/arrival_city"
                    style="@style/BookingInfoBlockMainStyle" />

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/Dates" />

                <TextView
                    android:id="@+id/dates"
                    style="@style/BookingInfoBlockMainStyle" />

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/number_nights" />

                <TextView
                    android:id="@+id/number_of_nights"
                    style="@style/BookingInfoBlockMainStyle" />

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/hotel" />

                <TextView
                    android:id="@+id/hotel"
                    style="@style/BookingInfoBlockMainStyle" />

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/room" />

                <TextView
                    android:id="@+id/room"
                    style="@style/BookingInfoBlockMainStyle" />

                <TextView
                    style="@style/BookingInfoBlockGrayStyle"
                    android:text="@string/food" />

                <TextView
                    android:id="@+id/food"
                    style="@style/BookingInfoBlockMainStyle" />
            </GridLayout>
        </androidx.cardview.widget.CardView>

        <!--buyer info-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/buyer_info"
                    android:textSize="22sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:background="@drawable/edit_text_container"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:padding="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:background="@drawable/edit_text_container"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/confidential_alert"
                    android:textColor="#828796"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>