<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="room"
            type="com.example.domain.modul.Room" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/photoCard"
                android:layout_width="match_parent"
                android:layout_height="257dp"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/photoPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:id="@+id/indicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/corousel_counter_layout"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:gravity="center"
                        android:orientation="horizontal" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/roomName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoCard" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/peculiarContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/peculiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flow_horizontalAlign="start"
                    app:flow_horizontalBias="0"
                    app:flow_wrapMode="chain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/moreAboutRoomContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/more_about_room_container"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoCard">

                <TextView
                    android:id="@+id/more_about_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/more_about_room"
                    android:textColor="#0D72FF" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/star_icon"
                    android:src="@drawable/arrow_right"
                    app:tint="#0D72FF" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/priceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@id/priceInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/priceInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textColor="#828796"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/price" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_choose_room_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/choose_room"
                app:backgroundTint="#0D72FF"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>